<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by SriRamaMurthy A on 25/5/19 3:50 PM
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 25/5/19 3:50 PM
  ~  */
  -->


<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_course"
        android:icon="@drawable/ic_course"
        android:title="@string/title_course" />

    <item
        android:id="@+id/navigation_live"
        android:icon="@drawable/ic_live"
        android:title="@string/title_live" />

    <item
        android:id="@+id/navigation_q_box"
        android:icon="@drawable/ic_k_hub"
        android:title="@string/title_q_box" />
    <item
        android:id="@+id/navigation_k_hub"
        android:icon="@drawable/ic_k_hub"
        android:title="@string/title_k_hub" />



</menu>
